Добавил репозиторий, сервис, контроллер и thymeleaf страницы для карьеры